# docs/global_openapi.go
@@ -12,3 +12,4 @@ package docs
 // @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host      localhost:8080
+// @securityDefinitions.basic  BasicAuth
